<resources>
    <string name="app_name">EnsomaZone</string>
    <string name="navigation_drawer_open">Öffne Navigationsleiste</string>
    <string name="navigation_drawer_close">Schließe Navigationsleiste</string>
    <string name="nav_header_title">Benutzername</string>
    <string name="nav_header_subtitle">user.name@gmail.com</string>
    <string name="nav_header_desc">Navigationskopf</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_summercamp">Sommercamps</string>
    <string name="menu_meetingpoint">JugendTreff</string>
    <string name="menu_slideshow">Sonstiges</string>
    <string name="sommercamps">Sommercamps</string>
    <string name="jugendtreffpunkte">JugendTreffpunkte</string>
    <string name="wann_wo_wer">Wann? Wo? Wer?</string>
    <string name="todo">ToDo</string>
    <string name="sportangebote">Sportangebote</string>
    <string name="menu_sportpage">Sportangebote</string>
    <string name="menu_onlinegames">Online Spiele</string>
    <string name="menu_languagelesson">Sprachkurse</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="ort">Ort</string>
    <string name="birthdate">Geburtstag</string>
    <string name="optional">Optionale Eingaben</string>
    <string name="link_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="angebote">Angebote</string>
    <string name="eislaufen">Eislaufen</string>
    <string name="datum" translatable="false">13.03.2022</string>
    <string name="teilnehmen">Teilnehmen</string>
    <string name="maerz_2022">März 2022</string>
    <string name="_12" translatable="false">12</string>
    <string name="hello">Hello</string>
    <string name="online_games">Online Games</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">E-Mail</string>
    <string name="meine_termine">Meine Termine</string>
    <string name="meine_angebote">MeineAngebote</string>
    <string name="benachrichtigungen">Benachrichtigungen</string>
    <string name="freunde_einladen">Freunde einladen</string>
    <string name="sommercamp">Sommercamp</string>
    <string name="stuttgart_waldau" translatable="false">Stuttgart Waldau</string>
    <string name="fu_ball">Fußball</string>
    <string name="bad_cannstatt" translatable="false">Bad Cannstatt</string>
    <string name="discord_channel">Discord Channel</string>
    <string name="teilnahme_bestaetigt">nehme teil</string>
    <string name="_19_00_uhr">19:00 Uhr</string>
</resources>