<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_summercamp">

    <fragment
        android:id="@+id/nav_summercamp"
        android:name="com.example.meetup.ui.home.HomeFragment"
        android:label="@string/menu_summercamp"
        tools:layout="@layout/fragment_startseite_details" />

    <fragment
        android:id="@+id/nav_youthmeetingpoint"
        android:name="com.example.meetup.ui.gallery.GalleryFragment"
        android:label="@string/menu_meetingpoint"
        tools:layout="@layout/fragment_youthmeetingpoint" />

    <fragment
        android:id="@+id/nav_sportpage"
        android:name="com.example.meetup.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_sportpage" />

    <fragment
        android:id="@+id/nav_onlinegames"
        android:name="com.example.meetup.ui.onlinegames.OnlineGamesFragment"
        android:label="@string/menu_onlinegames"
        tools:layout="@layout/fragment_online_games" />

    <fragment
        android:id="@+id/nav_languageLesson"
        android:name="com.example.meetup.ui.languagelesson.LanguageLessonFragment"
        android:label="@string/menu_languagelesson"
        tools:layout="@layout/language_lesson_fragment" />
</navigation>