<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="202dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="378dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="4dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="65dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="255dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="130dp"
                            android:gravity="center|top"
                            android:text="@string/eislaufen"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="140dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/stuttgart_waldau" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="233dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:gravity="start"
                            android:text="13"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="start"
                            android:text="@string/maerz_2022" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:text="@string/_19_00_uhr"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/teilnehmen1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BAC63A"
                        android:gravity="center"
                        android:text="@string/teilnehmen"
                        android:textAllCaps="false"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="378dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="4dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="65dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="255dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_text3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="130dp"
                            android:gravity="center|top"
                            android:text="@string/fu_ball"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="146dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/bad_cannstatt" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:gravity="start"
                            android:text="14"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="start"
                            android:text="@string/maerz_2022" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:text="19:00 Uhr"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/teilnehmen2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BAC63A"
                        android:gravity="center"
                        android:text="@string/teilnehmen"
                        android:textAllCaps="false"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="378dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="4dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="65dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="255dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_text8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="130dp"
                            android:gravity="center|top"
                            android:text="Overwatch"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="140dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/discord_channel" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:gravity="start"
                            android:text="20"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="start"
                            android:text="@string/maerz_2022" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:text="21:00 Uhr"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/teilnehmen3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BAC63A"
                        android:gravity="center"
                        android:text="@string/teilnehmen"
                        android:textAllCaps="false"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="378dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="4dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="65dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="255dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_text15"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="135dp"
                            android:gravity="center|top"
                            android:text="@string/sommercamp"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="165dp"
                            android:layout_marginTop="3dp"
                            android:text="Freiberg" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text14"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:gravity="start"
                            android:text="6"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="start"
                            android:text="Juli 2022" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:text="11:00 Uhr"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/teilnehmen4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#BAC63A"
                        android:gravity="center"
                        android:text="@string/teilnehmen"
                        android:textAllCaps="false"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>